--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.app {
-  min-height: 100vh;
-  background: lightblue;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.selector {
+  background-color: green;
 }
