--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
-.selector {
-  background-color: green;
+.sliderLabelContainer {
+  text-align: center;
+}
+.tab {
+  height: 100%;
+  max-width: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.tabsContainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+/* Mobile Styles */
+@media only screen and (max-width: 599px) {
 }
