--- a/src/SortVisualizer/SortVisualizer.css
+++ b/src/SortVisualizer/SortVisualizer.css
@@ -2,12 +2,31 @@
   background-color: #fad169;
 }
 .barContainer {
-  width: 90%;
+  width: 95%;
   height: 100vh;
   display: flex;
   justify-content: space-evenly;
   align-content: center;
   align-items: flex-end;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2%;
+}
+.btnsWrapper {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2%;
+}
+.mainBtn {
+  width: 30%;
+  height: 60px;
+}
+.slider {
+  width: 60%;
   margin-left: auto;
   margin-right: auto;
 }
