--- a/src/SortVisualizer/SortVisualizer.css
+++ b/src/SortVisualizer/SortVisualizer.css
@@ -3,14 +3,15 @@
 }
 .barContainer {
   width: 95%;
-  height: 100vh;
+  height: 55vh;
   display: flex;
   justify-content: space-evenly;
   align-content: center;
   align-items: flex-end;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2%;
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .btnsWrapper {
   display: flex;
