--- a/src/SortVisualizer/SortVisualizer.css
+++ b/src/SortVisualizer/SortVisualizer.css
@@ -5,7 +5,7 @@
   width: 95%;
   height: 55vh;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-content: center;
   align-items: flex-end;
   position: fixed;
