--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
   justify-content: space-evenly;
   align-items: center;
 }
+.appWrapper {
+  height: 100vh;
+}
 /* Mobile Styles */
 @media only screen and (max-width: 599px) {
 }
