--- a/src/SortVisualizer/SortVisualizer.css
+++ b/src/SortVisualizer/SortVisualizer.css
@@ -3,15 +3,14 @@
 }
 .barContainer {
   width: 95%;
-  height: 55vh;
   display: flex;
+  flex-grow: 1;
   justify-content: space-around;
   align-content: center;
   align-items: flex-end;
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2%;
 }
 .btnsWrapper {
   display: flex;
