--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .tab {
-  height: 100%;
   max-width: 75%;
   display: flex;
   justify-content: center;
@@ -12,9 +11,15 @@
   justify-content: space-evenly;
   align-items: center;
 }
-.appWrapper {
-  height: 100vh;
+/** Desktop Styles **/
+@media only screen and (min-width: 961px) {
 }
-/* Mobile Styles */
+/** Tablet Styles **/
+@media only screen and (min-width: 600px) and (max-width: 960px) {
+}
+/** Mobile Styles **/
 @media only screen and (max-width: 599px) {
+  .tab {
+    display: None;
+  }
 }
