--- a/src/SortVisualizer/SortVisualizer.css
+++ b/src/SortVisualizer/SortVisualizer.css
@@ -21,12 +21,39 @@
   margin-right: auto;
   margin-top: 2%;
 }
-.mainBtn {
-  width: 30%;
-  height: 60px;
-}
 .slider {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
+}
+
+/** Desktop Styles **/
+@media only screen and (min-width: 961px) {
+  .mainBtn {
+    width: 30%;
+    height: 60px;
+  }
+}
+/** Tablet Styles **/
+@media only screen and (min-width: 600px) and (max-width: 960px) {
+  .mainBtn {
+    width: 40%;
+    height: 50px;
+  }
+  .btnHeading {
+    font-size: 0.8em;
+  }
+}
+/** Mobile Styles **/
+@media only screen and (max-width: 599px) {
+  .mainBtn {
+    width: 45%;
+    height: 40px;
+  }
+  .btnHeading {
+    font-size: 0.6em;
+  }
+  .slider {
+    margin-top: 5%;
+  }
 }
