--- a/src/SortVisualizer/SortVisualizer.css
+++ b/src/SortVisualizer/SortVisualizer.css
@@ -12,7 +12,7 @@
   height: 100%;
   display: flex;
   flex-grow: 1;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-content: center;
   align-items: flex-end;
   margin-left: auto;
@@ -32,6 +32,7 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 .sliderBtnsWrapper {
   width: 60%;
 }
@@ -42,7 +43,7 @@
   align-items: center;
 }
 .speedSlider {
-  height: 95%;
+  height: 100%;
   display: flex;
 }
 /** Desktop Styles **/
@@ -71,15 +72,16 @@
     margin-top: 10%;
     margin-bottom: 5%;
     width: 100%;
+    height: 40%;
   }
   .mainBtn {
-    width: 45%;
+    width: 40%;
     height: 40px;
   }
   .slider {
     margin-top: 5%;
   }
   .speedSlider {
-    height: 90%;
+    height: 70%;
   }
 }
