--- a/src/SortVisualizer/SortVisualizer.css
+++ b/src/SortVisualizer/SortVisualizer.css
@@ -74,6 +74,9 @@
     width: 100%;
     height: 40%;
   }
+  .gitHubLogoWrapper {
+    display: none;
+  }
   .mainBtn {
     width: 40%;
     height: 40px;
