--- a/src/SortVisualizer/SortVisualizer.css
+++ b/src/SortVisualizer/SortVisualizer.css
@@ -22,6 +22,7 @@
 .btnsWrapper {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   margin-top: 2%;
 }
 .contentContainer {
@@ -78,7 +79,7 @@
     display: none;
   }
   .mainBtn {
-    width: 40%;
+    width: 45%;
     height: 40px;
   }
   .slider {
